--- a/ios/Podfile
+++ b/ios/Podfile
@@ -12,6 +12,8 @@ target 'DownloadFeature' do
     :hermes_enabled => false
   )
 
+  pod 'rn-fetch-blob', :path => '../node_modules/rn-fetch-blob'
+
   target 'DownloadFeatureTests' do
     inherit! :complete
     # Pods for testing
